Fix col spacing for the date and content inside the card

--- a/public/stylesheets/cards.css
+++ b/public/stylesheets/cards.css
@@ -4,5 +4,5 @@
 
 #simpleCard #date * {
 	color: #00BFA5;
-	font-size: 1.5em;
+	/*font-size: 1.1em;*/
 }
